[Create Task] - Fixed .text-box input width lose on big stretch.

--- a/client/scss/core/blocks/text-box.scss
+++ b/client/scss/core/blocks/text-box.scss
@@ -9,7 +9,8 @@
 
   input[type='text'] {
     display: block;
-    width: 97%;
+    box-sizing: border-box;
+    width: 100%;
     height: 30px;
     padding: 0 5px;
     border: 1px solid $gray-scale-4;
